--- a/hugo-common/assets/_questionList.scss
+++ b/hugo-common/assets/_questionList.scss
@@ -177,7 +177,7 @@ $question-color: #336;
     }
     
     span.q-text {
-      padding-left: 0.5rem; /* Space after the : */
+      padding-left: 0.25rem; /* Space after the : */
       color: var(--question-color);
       font-weight: 400;
     }
